added GetFilename and UpdateFilename
