# docs/swagger.json
@@ -10,7 +10,7 @@
     "paths": {
         "/auth/sign-in": {
             "post": {
-                "description": "check username and password",
+                "description": "User username and password are checked",
                 "consumes": [
                     "application/json"
                 ],
@@ -20,7 +20,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "Check user",
+                "summary": "User verification",
                 "parameters": [
                     {
                         "description": "User data",
@@ -56,7 +56,7 @@
         },
         "/auth/sign-up": {
             "post": {
-                "description": "Create a new user",
+                "description": "A new user will be created. Hashed before saving to database.",
                 "consumes": [
                     "application/json"
                 ],
@@ -66,7 +66,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "Create user",
+                "summary": "Create a new user",
                 "parameters": [
                     {
                         "description": "User data",
@@ -96,12 +96,7 @@
         },
         "/books": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "get all books",
+                "description": "All book data is retrieved from the database.",
                 "consumes": [
                     "application/json"
                 ],
@@ -139,7 +134,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "create book",
+                "description": "A new book is created using the given information.",
                 "consumes": [
                     "application/json"
                 ],
@@ -149,7 +144,7 @@
                 "tags": [
                     "books"
                 ],
-                "summary": "Create book",
+                "summary": "Create a new book",
                 "parameters": [
                     {
                         "description": "Book data",
@@ -185,12 +180,7 @@
         },
         "/books/{id}": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "get book by id",
+                "description": "User information is obtained by id and data.",
                 "consumes": [
                     "application/json"
                 ],
@@ -204,7 +194,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Book ID",
+                        "description": "Book id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -212,7 +202,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "The requested book data",
                         "schema": {
                             "$ref": "#/definitions/types.Book"
                         }
@@ -240,7 +230,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "update book by id",
+                "description": "The book will be updated using the given id and data.",
                 "consumes": [
                     "application/json"
                 ],
@@ -296,7 +286,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "delete book by id",
+                "description": "The book will be deleted using the given data.",
                 "consumes": [
                     "application/json"
                 ],
@@ -310,7 +300,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "User ID",
+                        "description": "Book id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -338,9 +328,51 @@
                 }
             }
         },
-        "/files": {
+        "/files/{id}": {
+            "get": {
+                "description": "This endpoint retrieves an object from the Minio bucket by its name.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/pdf"
+                ],
+                "tags": [
+                    "files"
+                ],
+                "summary": "Get book file",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Book id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Book file",
+                        "schema": {
+                            "type": "file"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "post": {
-                "description": "Loads a file using multipart/form-data and saves it to MinIO",
+                "description": "Upload a file for the specified book ID, replacing the existing file if any.",
                 "consumes": [
                     "multipart/form-data"
                 ],
@@ -350,11 +382,18 @@
                 "tags": [
                     "files"
                 ],
-                "summary": "File upload",
+                "summary": "Upload a new book file",
                 "parameters": [
                     {
+                        "type": "integer",
+                        "description": "Book id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "type": "file",
-                        "description": "File (JPG, PNG, etc.)",
+                        "description": "Book file",
                         "name": "file",
                         "in": "formData",
                         "required": true
@@ -370,46 +409,8 @@
                             "$ref": "#/definitions/types.ErrorResponse"
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/types.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/files/{objectName}": {
-            "get": {
-                "description": "This endpoint retrieves an object from the Minio bucket by its name.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/octet-stream"
-                ],
-                "tags": [
-                    "files"
-                ],
-                "summary": "Get an object from the Minio",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Name of the object to retrieve",
-                        "name": "objectName",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "The requested object file",
-                        "schema": {
-                            "type": "file"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/types.ErrorResponse"
                         }
@@ -430,7 +431,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "get all users",
+                "description": "All user data is retrieved from the database.",
                 "consumes": [
                     "application/json"
                 ],
@@ -468,7 +469,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "update user",
+                "description": "User information is updated using the provided information.",
                 "consumes": [
                     "application/json"
                 ],
@@ -519,7 +520,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "get user by id",
+                "description": "User information is obtained by id.",
                 "consumes": [
                     "application/json"
                 ],
@@ -572,7 +573,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "update user by id",
+                "description": "The user will be updated using the given data.",
                 "consumes": [
                     "application/json"
                 ],
@@ -628,7 +629,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "delete user by id",
+                "description": "User data will be deleted using the given information.",
                 "consumes": [
                     "application/json"
                 ],
@@ -678,13 +679,19 @@
                 "author": {
                     "type": "string"
                 },
+                "bookName": {
+                    "type": "string"
+                },
+                "filename": {
+                    "type": "string"
+                },
                 "genre": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
-                "name": {
+                "isbn": {
                     "type": "string"
                 }
             }
@@ -695,10 +702,13 @@
                 "author": {
                     "type": "string"
                 },
+                "bookName": {
+                    "type": "string"
+                },
                 "genre": {
                     "type": "string"
                 },
-                "name": {
+                "isbn": {
                     "type": "string"
                 }
             }
@@ -794,10 +804,13 @@
                 "author": {
                     "type": "string"
                 },
+                "bookName": {
+                    "type": "string"
+                },
                 "genre": {
                     "type": "string"
                 },
-                "name": {
+                "isbn": {
                     "type": "string"
                 }
             }
